<resources>

    <!--  General  -->
    <string name="app_name">Parchados</string>
    <string name="app_name_capital_letters">Parchados</string>

    <!--  Reusable  -->
    <string name="text_in">In</string>
    <string name="text_by">By:</string>
    <string name="text_name">name</string>
    <string name="text_text">text</string>
    <string name="text_count">count</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_password">Password</string>
    <string name="exclamation_mark">!</string>
    <string name="text_parchar">Parchar</string>
    <string name="text_learn">Learn</string>
    <string name="text_hello">Hello</string>
    <string name="text_search">Search</string>
    <string name="text_sports">Sports:</string>
    <string name="text_sport">Sport:</string>
    <string name="text_number">number</string>
    <string name="text_minutes">Minutes</string>
    <string name="textview_level">Level:</string>
    <string name="text_ready">Ready</string>
    <string name="textview_time">Time:</string>
    <string name="textview_place">Place:</string>
    <string name="text_students">Students:</string>
    <string name="text_professor">Professor:</string>
    <string name="text_headcount">Headcount</string>
    <string name="text_go_exclamation_mark">Go!</string>
    <string name="text_calification">Calification</string>
    <string name="text_maximum_students">Maximum students</string>
    <string name="text_profile_configuration">Profile configuration</string>

    <!--  Activity Access  -->
    <string name="access_hint_user_or_email">Username or Email</string>
    <string name="access_text_forgot_password">Forgot password?</string>
    <string name="access_text_sign_in_with">Sign in with</string>

    <!--  Activity SignUpInformation  -->
    <string name="sign_up_information_tittle_first_name">First name</string>
    <string name="sign_up_information_hint_first_name">Enter your first name</string>
    <string name="sign_up_information_tittle_last_name">Last name</string>
    <string name="sign_up_information_hint_last_name">Enter your last name</string>
    <string name="sign_up_information_tittle_username">Username</string>
    <string name="sign_up_information_hint_username">Enter your username</string>
    <string name="sign_up_information_tittle_email">Email</string>
    <string name="sign_up_information_hint_email">Enter your email</string>
    <string name="sign_up_information_tittle_email_confirmation">Email confirmation</string>
    <string name="sign_up_information_hint_email_confirmation">Enter your email again</string>
    <string name="sign_up_information_hint_password">Enter your password</string>
    <string name="sign_up_information_tittle_password_confirmation">Password confirmation</string>
    <string name="sign_up_information_hint_password_confirmation">Enter your password again</string>
    <string name="sign_up_information_button_next">Next</string>

    <!--  Activity Parchar  -->
    <string name="parchar_text_create_parche">Create your own parche</string>

    <!--  Activity Learn  -->
    <string name="parchar_text_create_class">Create your own class</string>

    <!--  Activity Create Parche  -->
    <string name="create_parche_text_title">Create your parche!</string>
    <string name="create_parche_enter_your_level">Enter your level</string>
    <string name="create_parche_minutes_to_play">Minutes to play</string>
    <string name="create_parche_enter_an_address">Enter an address</string>
    <string name="create_parche_or_select_the_place_on_the_map">Or select the place on the map</string>

    <!--  Activity Select Place  -->
    <string name="select_place_places_to">Places to</string>

    <!--  Activity Create Class  -->
    <string name="create_parche_tittle">Create your class!</string>
    <string name="create_class_minutes_to_teach">Minutes to teach</string>

    <!--  Activity Join a Parche  -->
    <string name="title_join_a_parche">Would you like to join this parche?</string>

    <!--  Activity Join a Class  -->
    <string name="title_join_a_class">Would you like to join this class?</string>
    <string name="in_progress_remaining_time">Remaining time:</string>

    <!--  Activity In Progress  -->
    <string name="text_finish">Finish</string>

    <!--  Activity ShowUsers  -->
    <string name="show_users_select_an_user_to_rate">Select an user to rate</string>
    <string name="text_submit">Submit</string>

    <!--  Activity RateUser  -->

    <!--  Activity ConfigurationMenu  -->
    <string name="configuration_menu_be_professor">Be professor</string>
    <string name="configuration_menu_delete_account">Delete account</string>
    <string name="configuration_menu_sign_out">Sign out</string>

    <!--  Activity ProfileConfiguration  -->

    <!--  Activity BeProfessor  -->

    <!--  Activity DeleteAccount  -->
    <string name="delete_account_enter_your_password_to_confirm">Enter your password to confirm</string>
    <string name="content_description_take_photo">Take a picture of yourself</string>
    <string name="content_description_upload_photo">Upload a picture of yourself</string>
    <string name="profile_configuration_hint_about">Tell everyone about you</string>
    <string name="profile_configuration_hint_age">Add age</string>
    <string name="about">about</string>
    <string name="profile_configuration_button_save">Save</string>

    <!--    Parte de la cámara -->

    <string name="temp_images_dir">temp_images</string>
    <string name="temp_image">temp_image.jpg</string>
    <string name="authorities">com.loschimbitas.parchados.fileprovider</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>